Fix favorite button active class malfunction, make active button visible in Favorites

--- a/src/containers/CourseInfoCard/CourseInfoCard.css
+++ b/src/containers/CourseInfoCard/CourseInfoCard.css
@@ -30,7 +30,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: #febb00;
 	cursor: pointer;
 	border: none;
 	justify-self: right;
